// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wrap-openai-conversation-traces logs wrapped chat and responses traces (openai 4.104.0) > span-events 1`] = `
[
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": "4.104.0",
      "operation": null,
      "provider": null,
      "scenario": "wrap-openai-conversation-traces",
    },
    "metric_keys": [],
    "name": "openai-wrapper-root",
    "root_span_id": "<span:1>",
    "span_id": "<span:1>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-chat-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:2>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_accepted_prediction_tokens",
      "completion_audio_tokens",
      "completion_reasoning_tokens",
      "completion_rejected_prediction_tokens",
      "completion_tokens",
      "prompt_audio_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "Chat Completion",
    "root_span_id": "<span:1>",
    "span_id": "<span:3>",
    "span_parents": [
      "<span:2>",
    ],
    "type": "llm",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-stream-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:4>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_accepted_prediction_tokens",
      "completion_audio_tokens",
      "completion_reasoning_tokens",
      "completion_rejected_prediction_tokens",
      "completion_tokens",
      "prompt_audio_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "Chat Completion",
    "root_span_id": "<span:1>",
    "span_id": "<span:5>",
    "span_parents": [
      "<span:4>",
    ],
    "type": "llm",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-responses-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:6>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_reasoning_tokens",
      "completion_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "openai.responses.create",
    "root_span_id": "<span:1>",
    "span_id": "<span:7>",
    "span_parents": [
      "<span:6>",
    ],
    "type": "llm",
  },
]
`;

exports[`wrap-openai-conversation-traces logs wrapped chat and responses traces (openai 5.11.0) > span-events 1`] = `
[
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": "5.11.0",
      "operation": null,
      "provider": null,
      "scenario": "wrap-openai-conversation-traces",
    },
    "metric_keys": [],
    "name": "openai-wrapper-root",
    "root_span_id": "<span:1>",
    "span_id": "<span:1>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-chat-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:2>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_accepted_prediction_tokens",
      "completion_audio_tokens",
      "completion_reasoning_tokens",
      "completion_rejected_prediction_tokens",
      "completion_tokens",
      "prompt_audio_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "Chat Completion",
    "root_span_id": "<span:1>",
    "span_id": "<span:3>",
    "span_parents": [
      "<span:2>",
    ],
    "type": "llm",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-stream-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:4>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_accepted_prediction_tokens",
      "completion_audio_tokens",
      "completion_reasoning_tokens",
      "completion_rejected_prediction_tokens",
      "completion_tokens",
      "prompt_audio_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "Chat Completion",
    "root_span_id": "<span:1>",
    "span_id": "<span:5>",
    "span_parents": [
      "<span:4>",
    ],
    "type": "llm",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-responses-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:6>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_reasoning_tokens",
      "completion_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "openai.responses.create",
    "root_span_id": "<span:1>",
    "span_id": "<span:7>",
    "span_parents": [
      "<span:6>",
    ],
    "type": "llm",
  },
]
`;

exports[`wrap-openai-conversation-traces logs wrapped chat and responses traces (openai 6.25.0) > span-events 1`] = `
[
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": "6.25.0",
      "operation": null,
      "provider": null,
      "scenario": "wrap-openai-conversation-traces",
    },
    "metric_keys": [],
    "name": "openai-wrapper-root",
    "root_span_id": "<span:1>",
    "span_id": "<span:1>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-chat-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:2>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_accepted_prediction_tokens",
      "completion_audio_tokens",
      "completion_reasoning_tokens",
      "completion_rejected_prediction_tokens",
      "completion_tokens",
      "prompt_audio_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "Chat Completion",
    "root_span_id": "<span:1>",
    "span_id": "<span:3>",
    "span_parents": [
      "<span:2>",
    ],
    "type": "llm",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-stream-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:4>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_accepted_prediction_tokens",
      "completion_audio_tokens",
      "completion_reasoning_tokens",
      "completion_rejected_prediction_tokens",
      "completion_tokens",
      "prompt_audio_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "Chat Completion",
    "root_span_id": "<span:1>",
    "span_id": "<span:5>",
    "span_parents": [
      "<span:4>",
    ],
    "type": "llm",
  },
  {
    "has_input": false,
    "has_output": false,
    "metadata": {
      "has_model": false,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": null,
      "scenario": null,
    },
    "metric_keys": [],
    "name": "openai-responses-operation",
    "root_span_id": "<span:1>",
    "span_id": "<span:6>",
    "span_parents": [
      "<span:1>",
    ],
    "type": null,
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "has_model": true,
      "openaiSdkVersion": null,
      "operation": null,
      "provider": "openai",
      "scenario": null,
    },
    "metric_keys": [
      "completion_reasoning_tokens",
      "completion_tokens",
      "prompt_cached_tokens",
      "prompt_tokens",
      "time_to_first_token",
      "tokens",
    ],
    "name": "openai.responses.create",
    "root_span_id": "<span:1>",
    "span_id": "<span:7>",
    "span_parents": [
      "<span:6>",
    ],
    "type": "llm",
  },
]
`;
